# finite_cell_application

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  Doxyfile  FiniteCellApplication.py  LICENSE.txt  finite_cell_application.cpp  finite_cell_application.h  finite_cell_application.sublime-project  finite_cell_application.sublime-workspace  finite_cell_application_variables.cpp  finite_cell_application_variables.h
custom_algebra/: and_brep.h  and_level_set_brep.h  brep.cpp  brep.h  circular_level_set.h  cos_function.h  function.h  heaviside_function.h  inverse_function.h  inverse_level_set.h  level_set.h  linear_level_set.h  load_function_plate_with_the_hole.h  monomial_function.h  negate_function.h  parametric_curve.h  parametric_surface.h  planar_level_set.h  pow_function.h  product_function.h  product_level_set.h  scalar_function.h  scale_function.h  sin_function.h  spherical_level_set.h  sum_function.h  trigonometric_function.h  zero_function.h
custom_algebra/curve/: parametric_curve.h
custom_algebra/function/: cubic_spline_function.h  function.h  heaviside_function.h  inverse_function.h  load_function_plate_with_the_hole.h  mathpresso_function.h  monomial_function.h  negate_function.h  pow_function.h  product_function.h  scalar_function.h  scale_function.h  sum_function.h  trigonometric_function.h  zero_function.h
custom_algebra/level_set/: circular_level_set.h  cylinder_level_set.h  difference_level_set.h  distance_to_curve_level_set.h  doughnut_level_set.h  intersection_level_set.h  inverse_level_set.h  level_set.h  linear_level_set.h  planar_level_set.h  product_level_set.h  spherical_level_set.h  union_level_set.h
custom_algebra/surface/: parametric_surface.h
custom_algebra/volume/: parametric_volume.h
custom_cmake_modules/: FindEigen.cmake  FindMathPresso.cmake  FindNNLS.cmake  FindSpectra.cmake
custom_conditions/: dummy_condition.cpp  dummy_condition.h  dummy_point_condition.cpp  dummy_point_condition.h  element_wrapper_condition.cpp  element_wrapper_condition.h  ghost_penalty_condition.h
custom_elements/: dummy_element.cpp  dummy_element.h
custom_external_libraries/: spline.h
custom_geometries/: finite_cell_geo_2d_bezier.h  finite_cell_geo_2d_bezier_3.h  finite_cell_geo_3d_bezier.h  finite_cell_geometry.h
custom_integration/: hexahedron_gauss_lobatto_integration_points.h  quadrilateral_gauss_lobatto_integration_points.h
custom_linear_solvers/: least_square_lapack_solver.h  nnls_solver.h  spectra_eigenvalues_solver.h
custom_python/: add_custom_algebra_1_to_python.cpp  add_custom_algebra_2_to_python.cpp  add_custom_algebra_to_python.cpp  add_custom_algebra_to_python.h  add_custom_conditions_to_python.cpp  add_custom_conditions_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  add_div_free_basis_utility_to_python.cpp  add_div_free_basis_utility_to_python.h  add_finite_cell_auxiliary_utility_to_python.cpp  add_finite_cell_auxiliary_utility_to_python.h  add_finite_cell_auxilliary_utility_to_python.cpp  add_finite_cell_auxilliary_utility_to_python.h  add_finite_cell_mesh_utility_to_python.cpp  add_finite_cell_mesh_utility_to_python.h  add_finite_cell_mesh_utility_to_python.sublime-workspace  add_ghost_penalty_utility_to_python.cpp  add_ghost_penalty_utility_to_python.h  add_moment_fitting_utility_to_python.cpp  add_moment_fitting_utility_to_python.h  add_quadrature_utility_to_python.cpp  add_quadrature_utility_to_python.h  add_quadtree_to_python.hpp  add_solvers_to_python.cpp  add_solvers_to_python.h  add_utility_to_python.cpp  add_utility_to_python.h  finite_cell_python_application.cpp
custom_python3/: add_custom_conditions_to_python.cpp  add_custom_conditions_to_python.h  add_div_free_basis_utility_to_python.cpp  add_div_free_basis_utility_to_python.h  add_finite_cell_auxiliary_utility_to_python.cpp  add_finite_cell_auxiliary_utility_to_python.h  add_finite_cell_mesh_utility_to_python.cpp  add_finite_cell_mesh_utility_to_python.h  add_ghost_penalty_utility_to_python.cpp  add_ghost_penalty_utility_to_python.h  add_moment_fitting_utility_to_python.cpp  add_moment_fitting_utility_to_python.h  add_quadrature_utility_to_python.cpp  add_quadrature_utility_to_python.h  add_quadtree_to_python.hpp  add_utility_to_python.cpp  add_utility_to_python.h  finite_cell_python_application.cpp
custom_utilities/: binary_tree.h  circular_level_set.h  div_free_basis_utility.h  finite_cell_auxiliary_utility.h  finite_cell_auxilliary_utility.h  finite_cell_geometry_utility.h  finite_cell_mesh_utility.cpp  finite_cell_mesh_utility.h  finite_cell_mesh_utility.hpp  function.h  ghost_penalty_utility.cpp  ghost_penalty_utility.h  heaviside_function.h  immersed_boundary_utility.h  level_set.h  linear_level_set.h  moment_fitted_quad_tree_garden.h  moment_fitted_quad_tree_subcell.h  moment_fitting_utility.h  moment_fitting_utility.h.fit_global  monomial_function.h  planar_level_set.h  product_function.h  quad_tree.h  quad_tree_node.cpp  quad_tree_node.h  quadrature_utility.h  skeleton_penalty_utility.h  spherical_level_set.h
python_scripts/: finite_cell_mpi_simulator.py  finite_cell_simulator.py  model_fc_include.py
